[package]
name = "pathfinder"
version = "0.1.0"
authors = ["Jeremy Shore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
pathfinding = "3.0.12"
wasm-bindgen = "0.2.80"
