[package]
name = "eve-routes"
version = "0.1.0"
authors = ["Jeremy Shore"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
js-sys = "0.3.57"
serde_json = "1.0"
futures = "0.3.21"
pathfinding = "3.0.12"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.7"

# [dependencies.lazy_static]
# git = "https://github.com/Kimundi/lazy-static.rs"

wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"