[package]
name = "eve-routes"
version = "0.1.0"
authors = ["Jeremy Shore"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
js-sys = "0.3.77"
serde_json = "1.0.140"
futures = "0.3.31"
pathfinding = "4.14.0"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook", "wee_alloc"]